feat(ngx-diff): allow line number width to be calculated dynamically (avoids overflow)

--- a/projects/ngx-diff/src/lib/components/side-by-side-diff/side-by-side-diff.component.html
+++ b/projects/ngx-diff/src/lib/components/side-by-side-diff/side-by-side-diff.component.html
@@ -11,8 +11,7 @@
   <div class="sbs-diff">
     <div class="sbs-diff-no-changes-text">There are no changes to display.</div>
   </div>
-}
-@if (!isContentEqual()) {
+} @else {
   <div class="sbs-diff">
     <!-- before -->
     <div class="sbs-diff-margin">
