--- a/projects/ngx-diff/styles/default-theme.css
+++ b/projects/ngx-diff/styles/default-theme.css
@@ -26,6 +26,9 @@
   --ngx-diff-light-mix-percentage: 4%;
   --ngx-diff-heavy-mix-percentage: 10%;
 
+  --ngx-diff-progress-background-color: #dfdfdf;
+  --ngx-diff-progress-foreground-color: #aaaaaa;
+
   --ngx-diff-inserted-background-color: var(--ngx-diff-insert-color);
   --ngx-diff-deleted-background-color: var(--ngx-diff-delete-color);
   --ngx-diff-equal-background-color: var(--ngx-diff-equal-color);
@@ -73,4 +76,7 @@
   --ngx-diff-mix-color: #fff;
   --ngx-diff-light-mix-percentage: 4%;
   --ngx-diff-heavy-mix-percentage: 10%;
+
+  --ngx-diff-progress-background-color: #354a54;
+  --ngx-diff-progress-foreground-color: #636363;
 }
