chore(deps): update to latest ngx-diff version

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,6 +74,7 @@
                     [before]="oldText()"
                     [after]="newText()"
                     [lineContextSize]="4"
+                    [isDynamicLineNumberWidthEnabled]="true"
                   >
                   </ngx-unified-diff>
                 </mat-card-content>
@@ -95,6 +96,7 @@
                     [before]="oldText()"
                     [after]="newText()"
                     [lineContextSize]="4"
+                    [isDynamicLineNumberWidthEnabled]="true"
                   >
                   </ngx-side-by-side-diff>
                 </mat-card-content>
